--- a/src/app/album-description/album-description.component.html
+++ b/src/app/album-description/album-description.component.html
@@ -3,7 +3,7 @@
         Featured
       </div>
       <div class="card-body">
-        <h5 class="card-title fs-1 fw-bold text-center">{{album.title}}</h5>
+        <h5 class="card-title fs-1 fw-bold text-center bg-dark text-white">{{album.title}}</h5>
         <h6 >Name: {{ album.name}}</h6>
         <p class="card-text bg-success-subtle shadow p-4">{{album.description}}</p>
         <p>Duration: {{album.duration || 0 }} min</p>
