--- a/src/app/album-details/album-details.component.html
+++ b/src/app/album-details/album-details.component.html
@@ -1,4 +1,4 @@
-<div [@fadeInAnimation] class="card bg-info-subtle" *ngIf="album">
+<div [@fadeInAnimation] class="detail-tab card bg-info-subtle" *ngIf="album">
     <img src="{{ album.url }}" alt="Group Music" class="card-img-top">
     <div class="card-body">
       <h5 class="card-title">{{ album.title }}</h5>
