--- a/src/app/admin/add-album/add-album.component.css
+++ b/src/app/admin/add-album/add-album.component.css
@@ -1,4 +1,4 @@
-.ng-valid:not(form),
+.ng-valid:not(form, [formArrayName]),
 .ng-valid.required{
     border-left: 8px solid #42a948;
 }
@@ -6,3 +6,4 @@
 .ng-invalid:not(form){
 border-left: 5px solid #a94442;
 }
+
