--- a/src/app/admin/album/album.component.html
+++ b/src/app/admin/album/album.component.html
@@ -1,10 +1,13 @@
-
+<p *ngIf="message" class="alert alert-success position-relative">
+{{ message }}
+<button (click)=" message = undefined " class="btn btn-close position-absolute end-0" aria-label="Close"></button>
+</p>
 <p>
     <button class="btn btn-dark" routerLink="/admin/add">Add Album</button>
 </p>
 
- <app-paginate (setPaginate)="onSetPaginate($event)"></app-paginate>
-<table class="table table-dark">
+ <app-paginate  (setPaginate)="onSetPaginate($event)"></app-paginate>
+<table class="table table-dark p-4">
     <thead>
         <tr>
             <th scope="col">#</th>
@@ -31,4 +34,4 @@
     </tbody>
 </table>
 
-<app-paginate (setPaginate)="onSetPaginate($event)"></app-paginate>
+<app-paginate class="center bg-warning" (setPaginate)="onSetPaginate($event)"></app-paginate>
