--- a/src/app/album-search/album-search.component.html
+++ b/src/app/album-search/album-search.component.html
@@ -1,4 +1,4 @@
-<form class="d-flex" role="search">
+<form class="d-flex flex-row" role="search">
     <input type="search" class="form-control me-2" placeholder="Search" aria-label="Search">
-    <button type="submit" class="btn btn-outline-success">Search</button>
+    <button type="submit" class="btn btn-outline-white mt-2">Search</button>
 </form>
