--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,24 @@
 <div class="container-fuild principal">
-    <nav class="navbar navbar-expand-lg bg-dark-subtle">
+    <nav class="navbar navbar-expand-lg bg-warning mb-3">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
         <li class="nav-item ">
           <a class="navbar-brand nav-link " routerLink="/">app-music</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/">Home</a>
+          <a class="nav-link" routerLink="/"><strong>Home</strong></a>
   
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/login">Se connecter</a>
+          <a class="nav-link" routerLink="/login"><strong>Se connecter</strong></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/admin">Admin</a>
+          <a class="nav-link" routerLink="/admin"><strong>Admin</strong></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/template">Template Form</a>
+          <a class="nav-link" routerLink="/template"><strong>Template Form</strong></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/reactive">Reactive Form</a>
+          <a class="nav-link" routerLink="/reactive"><strong>Reactive Form</strong></a>
         </li>
       </ul>
       <p *ngIf="count">{{ count }}</p>
