--- a/src/app/form-template/form-template.component.html
+++ b/src/app/form-template/form-template.component.html
@@ -1,25 +1,25 @@
-<p>form-template works!</p>
-<p>add-album works!</p>
+<p class="text-white">form-template works!</p>
+<!-- <p>add-album works!</p> -->
 <!-- pre ainsi mis permet d'avoir un aperçu du travail-->
-<pre>{{musicModel | json}}</pre>
+<pre class="text-white">{{musicModel | json}}</pre>
 
 <div class="container-sm" [hidden]="submitted">
-    <form #musicForm="ngForm"  (ngSubmit)="onSubmit(musicForm)" >
+    <form #musicForm="ngForm"  (ngSubmit)="onSubmit(musicForm)" class="bg-dark p-3">
         <div class="form-group">
-            <label for="name">Nom de l'album :</label>
-            <input type="text" class="form-control" id="name" name="name" #name="ngModel" [(ngModel)]="musicModel.name" required>
+            <label class="text-white" for="name">Nom de l'album :</label>
+            <input type="text" class="form-control mb-2" id="name" name="name" #name="ngModel" [(ngModel)]="musicModel.name" required>
             <div *ngIf="name.touched && (name.invalid || name.pristine)" class="alert alert-danger">Le nom de l'album est requis.</div>
             <!-- <label for="name">Nom de l'album :</label>
             <input type="text" class="form-control" #albumName [value]="name" (input)="updateName(albumName.value)"> -->
         </div>
         <div class="form-group">
-            <label for="auteur">Auteur :</label>
-            <input type="text" class="form-control" id="auteur" name="auteur" #auteur="ngModel" [(ngModel)]="musicModel.auteur" required>
+            <label class="text-white" for="auteur">Auteur :</label>
+            <input type="text" class="form-control mb-2" id="auteur" name="auteur" #auteur="ngModel" [(ngModel)]="musicModel.auteur" required>
             <div *ngIf="auteur.touched && (auteur.invalid || auteur.pristine)" class="alert alert-danger">L'auteur est requis.</div>
         </div>
         <div class="form-group">
-            <label for="style">Style de musique :</label>
-            <select  id="style" class="form-control" name="style"[(ngModel)] = "musicModel.style">
+            <label class="text-white" for="style">Style de musique :</label>
+            <select  id="style" class="form-control mb-2" name="style"[(ngModel)] = "musicModel.style">
                 <option *ngFor="let genre of genres" [value]="genre" >{{ genre }}</option>
             </select>
         </div>
