--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,13 +1,13 @@
-<form [@fadeInAnimation] class=" bg-primary-subtle shadow-lg m-4 p-2" (ngSubmit)="onSubmit(formLogin)" #formLogin="ngForm">
+<form [@fadeInAnimation] class="border border-black border-5 bg-primary-success shadow-lg m-4 p-2" (ngSubmit)="onSubmit(formLogin)" #formLogin="ngForm">
   <div class="form-group">
     <label for="exampleInputEmail1" class="text-white">Email address</label>
-    <input name="email" ngModel email required type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-      placeholder="Enter email">
+    <input name="email" ngModel email required type="email" class="form-control bg-info-subtle" id="exampleInputEmail1" aria-describedby="emailHelp"
+      placeholder="Enter email" >
     <small id="emailHelp" class="form-text text-muted text-white">We'll never share your email with anyone else.</small>
   </div>
   <div class="form-group">
     <label for="exampleInputPassword1" class="text-white">Password</label>
-    <input name="password" ngModel required type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+    <input name="password" ngModel required type="password" class="form-control bg-info-subtle" id="exampleInputPassword1" placeholder="Password">
   </div>
   <div class="form-check">
     <input type="checkbox" class="form-check-input" id="exampleCheck1">
