--- a/src/app/paginate/paginate.component.html
+++ b/src/app/paginate/paginate.component.html
@@ -1,14 +1,14 @@
-<nav aria-label="Page navigation example">
-  <ul class="pagination">
+<nav aria-label="Page navigation example" class="justify-content-center">
+  <ul class="pagination justify-content-center p-3">
     <li (click)="previous()" role="button" class="page-item"
     [ngClass]="{'disabled': currentPage === 1}">
       <button class="page-link">Previous</button>
     </li>
-    <li role="button" class="page-item" *ngFor="let page of pages" (click)="changePage(page)">
-      <button class="page-link" [ngClass]="{'active': currentPage === page}">{{ page }}</button>
+    <li role="button" class="page-item " *ngFor="let page of pages" (click)="changePage(page)">
+      <button class="page-link bg-warning text-dark" [ngClass]="{'active': currentPage === page}">{{ page }}</button>
     </li>
     <li (click)="next()" role="button" class="page-item" [ngClass]="{'disabled': currentPage === numberPages}">
-      <button class="page-link">Next</button>
+      <button class="page-link  bg-warning text-dark">Next</button>
     </li>
   </ul>
 </nav>
